# SDP-Project-Smart-Cart

./: MoveBase.cfg  README.md  barcode_scanner.py  idk.py  interface.py  test.py  test2
TagLocalisation/: coordinates_client.py  coordinates_server.py  serial_client.py  socket_client.py  socket_server.py  tcp_test_server.py
User Int/: ProductFr.py  UserInt.py  barcode_scanner.py  bcScan.py  client.py  dontuse.py  productDB.py  test2.py  testSocket.py  testing.py  ui.py
custom_recovery/: CMakeLists.txt  customRec_plugin.xml  package.xml
custom_recovery/include/custom_recovery/: rotate_recovery.h
custom_recovery/src/: custom_recovery.cpp
navigational files/: README.md  map.pgm  map.yaml
navigational files/param/: costmap_common_params_waffle_pi.yaml
navigational files/smart_cart/: CMakeLists.txt  package.xml
navigational files/smart_cart/cfg/: movebase.cfg
navigational files/smart_cart/launch/: smart_cart.launch
navigational files/smart_cart/param_settings/: dwa_local_planner_params_waffle_pi_normal.yaml  dwa_local_planner_params_waffle_pi_parking.yaml
navigational files/smart_cart/src/: bottom_left.py  client.py  find_space.py  movebase_client.py  reset_initpose.py  rewrite_params.py  server.py  spin.py  top_left.py  top_right.py
param/: base_local_planner_params.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml
smart_cart/src/: bottom_left.py  bottom_right.py  movebase_client.py  pub_initpose.py  top_left.py
