<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>custom_recovery</name>
    <version>0.0.1</version>
    <description>

        This package provides a recovery behavior for the navigation stack that attempts to clear space by performing a 360 degree rotation of the robot.

    </description>
    <author>R-Shaw</author>
    <author>s2077451@ed.ac.uk</author>
    <maintainer email="s2077451@ed.ac.uk">R Shaw</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>sensor_msgs</depend>

    <export>
        <nav_core plugin="${prefix}/customRec_plugin.xml" />
    </export>

</package>
